--- a/package.json
+++ b/package.json
@@ -3,17 +3,31 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "eslint && vite",
+    "prebuild": "tsc --noEmit",
+    "build": "npm run prebuild && vite build",
+    "preview": "vite preview",
+    "eslint": "eslint .eslintrc.js"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "eslint": "^8.49.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "postcss-nesting": "^12.0.1",
     "sass": "^1.66.1",
+    "stylelint": "^15.10.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vite-plugin-handlebars": "^1.6.0"
   },
   "dependencies": {
+    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.18.2",
     "handlebars": "^4.7.8"
   },
