--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-nesting": "^12.0.1",
     "sass": "^1.66.1",
     "stylelint": "^15.10.3",
+    "stylelint-config-standard-scss": "^11.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
