--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
-    //"noImplicitAny": true,
+    "noImplicitAny": true,
     "noUnusedParameters": true,
     "sourceMap": true,
     "strictNullChecks": true
