--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "prebuild": "tsc --noEmit",
     "build": "npm run prebuild && vite build",
     "preview": "vite preview",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
     "eslint": "eslint .eslintrc.js"
   },
   "devDependencies": {
@@ -28,7 +30,6 @@
     "vite-plugin-handlebars": "^1.6.0"
   },
   "dependencies": {
-    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.18.2",
     "handlebars": "^4.7.8"
   },
