--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "stylelint-config-standard-scss": "^11.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "vite": "^4.4.5",
-    "vite-plugin-handlebars": "^1.6.0"
+
   },
   "dependencies": {
     "express": "^4.18.2",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "vite": "^4.4.5",
+    "vite-plugin-handlebars": "^1.6.0"
   },
   "engines": {
     "node": "16.13.1"
