--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "stylelint": "^15.10.3",
     "stylelint-config-standard-scss": "^11.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.2.2"
 
   },
   "dependencies": {
