--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run prebuild && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "stylelint": "npx stylelint \"**/*.scss\""
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.2",
