Доработки по замечаниям

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,8 @@
   "extends": "stylelint-config-standard",
   "ignoreFiles": [
     "build/*"
-  ]
+  ],
+  "rules": {
+    "import-notation": "string"
+  }
 }
