--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "stylelint": "npx stylelint \"**/*.scss\""
+    "stylelint": "npx stylelint \"**/*.scss\"",
+    "stylelint:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "cors": "^2.8.5",
     "eslint": "^8.49.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard-with-typescript": "^39.0.0",
