--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "prebuild": "tsc --noEmit",
     "build": "npm run prebuild && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
-    "stylelint": "npx stylelint \"**/*.scss\"",
+    "lint": "npm run check:css && npm run check:js",
+    "check:css": "npx stylelint \"**/*.scss\"",
+    "check:js": "eslint src --ext .ts",
+    "test": "mocha",
+    "lint:fix": "npm run check:js -- --fix",
     "stylelint:fix": "npx stylelint \"**/*.scss\" --fix"
+
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.23.2",
+    "@babel/register": "^7.22.15",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/sinon": "^10.0.20",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "chai": "^4.3.10",
     "cors": "^2.8.5",
     "eslint": "^8.49.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -22,8 +32,12 @@
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "husky": "^8.0.3",
+    "jsdom": "^22.1.0",
+    "mocha": "10.2.0",
     "postcss-nesting": "^12.0.1",
     "sass": "^1.66.1",
+    "sinon": "16.1.3",
     "stylelint": "^15.10.3",
     "stylelint-config-standard-scss": "^11.0.0",
     "ts-node": "^10.9.1",
@@ -35,6 +49,11 @@
     "express": "^4.18.2",
     "handlebars": "^4.7.8",
     "nanoid": "^5.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "precommit": "npm-run-all test lint"
+    }
   },
   "engines": {
     "node": "16.13.1"
