--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "husky": {
     "hooks": {
-      "precommit": "npm-run-all test lint"
+      "pre-commit": "npm-run-all test lint"
     }
   },
   "engines": {
